<resources>
    <string name="app_name">GOVAVA</string>
    <string name="spinner_title"> 0-1(infant)</string>

    <string name="facebook_app_id">416884705449089</string>
    <string name="fb_login_protocol_scheme">fb416884705449089</string>


    <string-array name="ages">
        <item>2-9</item>
        <item>10-12</item>
        <item>13-15</item>
        <item>16-24</item>
        <item>25-32</item>
        <item>33-45</item>
        <item>46-55</item>
        <item>56-65</item>
        <item>65-older</item>
    </string-array>

    <string-array name="old">
        <item>0-1(Infant)</item>
        <item>2-9</item>
        <item>10-12</item>
        <item>13-15</item>
        <item>16-24</item>
        <item>25-32</item>
        <item>33-45</item>
        <item>46-55</item>
        <item>56-65</item>
        <item>65-80</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Relative</item>
        <item>Best Friend</item>
        <item>Casual Friend</item>

    </string-array>

    <string-array name="range">
        <item>$2-25</item>
        <item>$30-40</item>
        <item>$45-50</item>
        <item>$75-100</item>
        <item>$More</item>

    </string-array>

    <string-array name="occasions">
        <item>Birthday</item>
        <item>Bridal</item>
        <item>Thanksgiving</item>
        <item>Christmas</item>
        <item>Easter</item>
        <item>Hanuka</item>
        <item>New Born</item>
        <item>Baby Shower</item>
        <item>Bachelorette/Bachelor Party</item>
        <item>Promotion</item>
        <item>Sympathy</item>
        <item>Graduation</item>
        <item>Passed Big Exam</item>
        <item>Weight loss</item>
        <item>Get Well Soon/Welcome home from hospital</item>
        <item>Apology</item>
        <item>Thank you/Appreciation</item>
        <item>Grand Opening</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_Home">Home</string>
    <string name="nav_Notification">Notification</string>
    <string name="nav_WhatToBuy">What to buy?</string>
    <string name="nav_Pets">Pets</string>
    <string name="nav_Favorites">Favorites</string>
    <string name="nav_MyPurchases">My Purchases</string>
    <string name="nav_Categories">Categories</string>
    <string name="nav_Settings">Settings</string>
    <string name="nav_HelpContact">Help and Contact</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_govava">MY GOVAVA</string>
    <string name="title_activity_demo">DemoActivity</string>

    <string name="action_settings">Settings</string>


    <string name="help_contact_des">Lorem ipsum dolor sit amet,
consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore
et dolore magna aliqua. Ut enim ad
minim veniam, quis nostrud
exercitation ullamco laboris nisi ut
aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</string>

</resources>
